# ServoDog-ESP32

./: CMakeLists.txt  cp2win.sh  sdkconfig  sdkconfig.old
components/HQCoreS3/: CMakeLists.txt  idf_component.yml
components/HQCoreS3/include/: HQCoreS3.h
components/HQCoreS3/source/: button.c  camera.c  i2c_bus.c  led.c  led_strip_encoder.c  led_strip_encoder.h  lvgl_port.c  misc.c  mpu6050.c  sdcard.c
main/: CMakeLists.txt  app_main.cpp
